# vibesafe

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: auto_fix.py  ci_integration.py  scan_project.py  with_injectionguard.py
scripts/: generate_assets.py
src/vibesafe/: __init__.py  cli.py  complexity.py  fixer.py  mcp.py  sarif.py  scanner.py
src/vibesafe/checks/: __init__.py  dead_code.py  imports.py  patterns.py  secrets.py  security.py
tests/: test_cli.py  test_complexity.py  test_dead_code.py  test_edge_cases.py  test_fixer.py  test_imports.py  test_mcp.py  test_patterns.py  test_sarif.py  test_scanner.py  test_secrets.py  test_security.py
